--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.eli</groupId>
-    <artifactId>Feb21Maven</artifactId>
+    <artifactId>Currency Converter</artifactId>
     <version>1.0.0</version>
     <dependencies>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>RELEASE</version>
-            <scope>test</scope>
-        </dependency>
+
     </dependencies>
 
     <properties>
